--- a/Windows/packages.config
+++ b/Windows/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="73.1.13" targetFramework="net46" />
-  <package id="cef.redist.x86" version="73.1.13" targetFramework="net46" />
+  <package id="cef.redist.x64" version="86.0.24" targetFramework="net46" />
+  <package id="cef.redist.x86" version="86.0.24" targetFramework="net46" />
   <package id="CefSharp.Common" version="86.0.241" targetFramework="net46" />
   <package id="CefSharp.WinForms" version="86.0.241" targetFramework="net46" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
-  <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net46" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net46" />
+  <package id="System.Data.SQLite" version="1.0.113.6" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net46" />
+  <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net46" />
 </packages>
